Fixing issue on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,12 @@ nav {
     width: 100%;
     background-color: #3ad;
     height: 30px;
-    /*display: flex;
-    align-items: stretch;*/
+    display: table;
+
+}
+
+nav li {
+    display: table-cell;
 }
 
 nav a {
